# game7

./: .gitignore  Game 8.html  README.md  README_A1_IMPLEMENTATION.md  demo.py  demo_a1_melee.py  feature_overview.html  game.html  game_assets.json  game_bridge.py  game_engine.py  graphics_gen.py  index.html  main.py  pyproject.toml  requirements.txt  run_tests.py  test_a1_melee.py  test_game.html  test_game_engine.py  test_graphics_gen.py  test_main.py  test_web_server.py  web_server.py
.github/: copilot-instructions.md
Game 8/: Runner  too-many-giftboxes.html
Runner 7/: custom_sprites_manifest.json  setup.ps1  sprite_loader.js  too many giftboxes.html
assets/: README.md
configs/: game_config.json
css/: style.css
data 2/: # Game Images.md  A1K_Enhanced_UI_README.md  A1K_UI_INTEGRATION.md  ASSET_MANIFEST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  EFFECTS_README.md  ENHANCED_FEATURES_v2.5.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Missy_Mage_manifest.json  README1.md  STRUCTURE.md  TESTING_GUIDE.md  a1_effects_bridge.js  a1_effects_loader.js  a1_effects_manifest.json  a1_sword_system.js  a1k_integration.js  a1k_patch.js  a1k_skill_registry.json  advanced_sprite_config.json  assetManifest.js  asset_manifest6.json  boss_manifest.json  boss_manifest2.json  boss_manifest4.json  boss_manifest7.json  characters_manifest_a1_idle.json  comprehensive_asset_manifest.json  enhanced-ui2.js  game 2.js  game-api-integration.js  gameplay-pets-vehicles.js  gmanifest.json  icon manifest.json  imageLoader.js  inventory_system.js  loader ic.js  loader.js  (+28 more)
(+97 files in other folders)
