[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game7"
version = "0.1.0"
description = "Game development workspace"
authors = [{name = "A1kush"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.5.0",
    "numpy>=1.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0", 
    "flake8>=6.0.0"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]